# CrewAvaliadoraV2

./:  novo  .cache_ggshield  .dockerignore  .env.example  .gitignore  .safety-project.ini  BUGFIX_EMPTY_REPORTS.md  COMPLETE_SUCCESS_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LEGACY_INTEGRATION_PLAN.md  OUTPUT_REORGANIZATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PROJECT_REVIEW.md  README.md  README_CREW.md  REORGANIZATION_SUMMARY.md  SUCCESS_EXECUTION_REPORT.md  SYSTEM_IMPROVEMENTS.md  SYSTEM_STATUS.md  TEMPLATE_COMPARISON.md  TEST_REPORT_GROUPS_EVO.md  VERIFICATION_LOG.md  bandit-report.json  coverage.xml  crew_avaliacao_completa.py  crew_avaliacao_v2.py  pyproject.toml  relatorio_codebase.md
.github/: copilot-instructions.md
config/: crew_config.yaml
crewai_system/: .env.example  ENTREGA_COMPLETA.md  INSTALACAO.md
docs/: ARCHITECTURE.md  README.md
outputs/: README.md
reports_by_file/: README.md_20250817_124016.md  README.md_20250817_124850.md  README.md_20250817_125300.md  README_CREW.md_20250817_124219.md  README_CREW.md_20250817_124847.md  README_CREW.md_20250817_125736.md  crew_avaliacao_completa.py_20250817_124537.md  crew_avaliacao_completa.py_20250817_124853.md  crew_avaliacao_completa.py_20250817_125301.md  crew_avaliadora_README.md_20250817_124539.md  crew_avaliadora_knowledge_user_preference.txt_20250817_124016.md  crew_avaliadora_src_latest_ai_development___init__.py_20250817_124220.md  crew_avaliadora_src_latest_ai_development_config_agents.yaml_20250817_124220.md  crew_avaliadora_src_latest_ai_development_config_tasks.yaml_20250817_124220.md  crew_avaliadora_src_latest_ai_development_crew.py_20250817_124220.md  crew_avaliadora_src_latest_ai_development_main.py_20250817_124220.md  crew_avaliadora_src_latest_ai_development_tools___init__.py_20250817_124016.md  crew_avaliadora_src_latest_ai_development_tools_custom_tool.py_20250817_124016.md  crew_gemini_simples.py_20250817_124016.md  crew_gemini_simples.py_20250817_124908.md  crew_gemini_simples.py_20250817_125302.md  crewai_system_ENTREGA_COMPLETA.md_20250817_124219.md  crewai_system_INSTALACAO.md_20250817_124539.md  crewai_system_README.md_20250817_124016.md  (+612 more)
(+101 files in other folders)
